add listener and logic move thumb

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>TypeScript</title>
 </head>
 <body>
-    .
+
+    
+    <div class="container_range">
+        <div class="range">
+            <div class="field_range"></div>
+            <div class="steps"></div>
+            <div class="thumb" id="thumbLeft"></div>
+            <!-- <div class="thumb" id="thumbRight"></div> -->
+        </div>
+    </div>
 
 
     <script src="main.js"></script>
