--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     
     <div class="container_range">
         <div class="range">
-            <div class="field_range"></div>
+            <div class="field_range" style="width:0%; left:0;"></div>
             <div class="steps"></div>
-            <div class="thumb" id="thumbLeft"></div>
-            <!-- <div class="thumb" id="thumbRight"></div> -->
+            <div class="thumb" id="thumbLeft" style="width:18px;
+            height:18px; left:20px;"></div>
+            <div class="thumb" id="thumbRight" style="width:18px;
+            height:18px; left:80px;"></div>
         </div>
     </div>
 
