--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
     <title>TypeScript</title>
 </head>
 <body>
-
+    
     
     <div class="container_range">
         <div class="range">
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="steps"></div>
-            <div class="thumb" id="thumbLeft" style="width:18px;
+            <div class="thumb thumbLeft" style="width:18px;
             height:18px; left:20px;"></div>
-            <div class="thumb" id="thumbRight" style="width:18px;
+            <div class="thumb thumbRight" style="width:18px;
             height:18px; left:80px;"></div>
         </div>
     </div>
+
+    <div class="container_range">
+        <div class="range">
+            <div class="field_range" style="width:0%; left:0;"></div>
+            <div class="steps"></div>
+            <div class="thumb thumbRight" style="width:18px;
+            height:18px; left:20px;"></div>
+            <div class="thumb thumbRight" style="width:18px;
+            height:18px; left:80px;"></div>
+        </div>
+    </div>
+
 
 
     <script src="main.js"></script>
