--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="container_range">
+    <!-- <div class="container_range">
         <div class="range">
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="steps"></div>
@@ -30,7 +30,7 @@
             <div class="thumb thumbRight" style="width:18px;
             height:18px; left:80px;"></div>
         </div>
-    </div>
+    </div> -->
 
 
 
