--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
             <div class="steps"></div>
             <div class="thumb thumbLeft" style="width:18px;
             height:18px; left:20px;"></div>
+            <div class="output outputLeft">
+                <span id = "valueLeft"></span>
+            </div>
             <div class="thumb thumbRight" style="width:18px;
             height:18px; left:80px;"></div>
+            <div class="output outputRight">
+                <span id = "valueRight"></span>
+
+            </div>
         </div>
     </div>
 
