Change system from px to %

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="steps"></div>
             <div class="thumb thumbLeft" style="width:18px;
-            height:18px; left:20px;" value></div>
+            height:18px; left:1%;" value></div>
             <div class="output outputLeft">
-                <input type = "number" id = "valueLeft" max="15000" min="0" maxlength="5" size="3" value="0">
+                <input type = "number" id = "valueLeft" max="15000" min="0" maxlength="5" size="6" value="0">
             </div>
             <div class="thumb thumbRight" style="width:18px;
-            height:18px; left:80px;"></div>
+            height:18px; left:40%;"></div>
             <div class="output outputRight">
-                <input type = "number" id = "valueRight" max="15000" min="0" maxlength="5" size="3" value="0">
+                <input type = "number" id = "valueRight" max="15000" min="0" maxlength="5" size="6" value="0">
             </div>
         </div>
     </div>
