--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <div class="range">
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="steps"></div>
+            <div class="valueTop valueTopLeft" style="left:20%;"></div>
             <div class="thumb thumbLeft" style="width:18px;
             height:18px; left:1%;" value></div>
             <div class="output outputLeft">
                 <input type = "number" id = "valueLeft" max="15000" min="0" maxlength="5" size="6" value="0">
             </div>
+            <div class="valueTop valueTopRight" style="left:20%;"></div>
             <div class="thumb thumbRight" style="width:18px;
             height:18px; left:40%;"></div>
             <div class="output outputRight">
