Added value top for right

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </div>
     </div>
 
+    <div class="options">
+        <div class="tip"></div>
+        <div class="min"></div>
+        <div class="max"></div>
+        <div class="steps"></div>
+    </div>
+
     <!-- <div class="container_range">
         <div class="range">
             <div class="field_range" style="width:0%; left:0;"></div>
