Added possibility change tip

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="options.css" rel="stylesheet">
     <title>TypeScript</title>
 </head>
 <body>
@@ -17,23 +18,33 @@
             <div class="valueTop valueTopLeft" style="left:20%;"></div>
             <div class="thumb thumbLeft" style="width:18px;
             height:18px; left:1%;" value></div>
-            <div class="output outputLeft">
-                <input type = "number" id = "valueLeft" max="15000" min="0" maxlength="5" size="6" value="0">
-            </div>
             <div class="valueTop valueTopRight" style="left:20%;"></div>
             <div class="thumb thumbRight" style="width:18px;
             height:18px; left:40%;"></div>
-            <div class="output outputRight">
-                <input type = "number" id = "valueRight" max="15000" min="0" maxlength="5" size="6" value="0">
-            </div>
+            
         </div>
     </div>
 
     <div class="options">
-        <div class="tip"></div>
+        <div class="tip">
+            <span>tip: </span>
+            <button id = "btnTip">Вкл/Выкл</button>
+        </div>
         <div class="min"></div>
         <div class="max"></div>
         <div class="steps"></div>
+        <div class="from">
+            <div class="output outputLeft">
+                <span>from: </span>
+                <input type = "number" id = "valueLeft" max="15000" min="0" maxlength="5" size="6" value="0">
+            </div>
+        </div>
+        <div class="to">
+            <div class="output outputRight">
+                <span>to: </span>
+                <input type = "number" id = "valueRight" max="15000" min="0" maxlength="5" size="6" value="0">
+            </div>
+        </div>
     </div>
 
     <!-- <div class="container_range">
