--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             height:18px; left:40%;"></div>
         </div>
         <div class="steps">
+            <div class="startStep"></div>
+            <div class="stepsIn" style="width:100%;"></div>
+            <div class="endStep"></div>
 
         </div>
     </div>
