--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="from">
             <div class="output outputLeft">
                 <span>from: </span>
-                <input type = "number" id = "valueLeft" max="100" min="0" maxlength="5" size="6" value="0" step="1">
+                <input type = "number" id = "valueLeft" max="5000" min="0" maxlength="5" size="6" value="0" step="1">
             </div>
         </div>
         <div class="to">
             <div class="output outputRight">
                 <span>to: </span>
-                <input type = "number" id = "valueRight" max="100" min="0" maxlength="5" size="6" value="0" step="1">
+                <input type = "number" id = "valueRight" max="5000" min="0" maxlength="5" size="6" value="0" step="1">
             </div>
         </div>
         <div class="container_steps">
@@ -79,6 +79,11 @@
                 <span id="instep">steps:</span>
                 <input type="number" id="valueSteps">
             </div>
+        </div>
+
+        <div class="container_bar">
+            <span id="spanBar"> Bar</span>
+            <button id="bar">Вкл/Выкл</button>
         </div>
         
     </div>
