--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
 
 
     <script src="main.js"></script>
-    <script src="range.js"></script>
+    <script src="range1.js"></script>
 </body>
 </html>
