--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     
     <div class="container_range">
-        <div class="range">
+        <div class="range range_horizontal" tip="on" condition="horizontal" bar="on" range="double" steps="1" maximum="5000" minimum="0" index="1">
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="valueTop valueTopLeft" style="left:20%;"></div>
             <div class="thumb thumbLeft" style="width:10px;
@@ -26,7 +26,6 @@
             <div class="startStep"></div>
             <div class="stepsIn" style="width:100%;"></div>
             <div class="endStep"></div>
-
         </div>
     </div>
 
