--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </div>
     </div>
 
-    <div class="container_range_vertical">
+    <!-- <div class="container_range_vertical">
         <div class="rangeVertical">
             <div class="field_range_vertical" style="height:10%; left:0;"></div>
-            <div class="thumbVertical thumbTop" style="top:1%;" value></div>
+            <div class="thumbVertical thumbTop" style="top:1%;" value></div> -->
             <!-- <div class="thumb thumbDown" style="width:18px;
             height:18px; left:40%;"></div> -->
-        </div>
-    </div>
+        <!-- </div>
+    </div> -->
     
 
     
