--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
         <div class="output_container">
             <div class="min">
                 <span>Минимум: </span>
-                <input type="number" id="minimum" min="0" value="0">
+                <input type="number" id="minimum" value="0" min="0">
             </div>
             <div class="max">
                 <span>Максимум: </span>
-                <input type="number" id="maximum" max="1" value="1">
+                <input type="number" id="maximum" value="5000" max="5000">
             </div>
             <!-- <div class="steps"></div> -->
             <div class="from">
                 <span>from: </span>
-                <input type = "number" id = "valueLeft" max="5000" min="0" maxlength="5" size="6" value="0" step="1">
+                <input type = "number" id = "valueLeft" max="5000" min="0" maxlength="5" size="6" value="1100" step="1">
             </div>
             <div class="to">
                 <span>to: </span>
-                <input type = "number" id = "valueRight" max="5000" min="0" maxlength="5" size="6" value="0" step="1">
+                <input type = "number" id = "valueRight" max="5000" min="0" maxlength="5" size="6" value="3400" step="1">
             </div>
             <div class="steps1">
                 <span id="instep">steps:</span>
