continue fix bug and deleting worse files and code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     
     <div class="container_range">
-        <div class="range range_horizontal" tip="on" condition="horizontal" bar="on" range="double" steps="1" maximum="5000" minimum="0" index="1">
+        <div id="slider" class="range range_horizontal" tip="on" condition="horizontal" bar="on" range="double" steps="1" maximum="5000" minimum="0" index="1">
             <div class="field_range" style="width:0%; left:0;"></div>
             <div class="valueTop valueTopLeft" style="left:25%;"></div>
             <div class="thumb thumbLeft" style="width:10px;
