Deleter worse files

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
                 <input type="number" id="valueSteps">
             </div>
         </div>
-        
     </div>
 
     <!-- <div class="container_range">
@@ -96,6 +95,6 @@
 
 
     <script src="main.js"></script>
-    <script src="range1.js"></script>
+    <script src="range.js"></script>
 </body>
 </html>
