--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
     <title>fermanachi Slider</title>
 </head>
 <body>
-    
-    
-    <div id="fermanachi-slider"></div>
-    <!-- <div id="fermanachi-slider1"></div> -->
-    <div id="fermanachi-slider2"></div>
 
+    <div id="fermanachi-slider"></div>
 
     <div class="options">
         <div class="buttons_container">
@@ -57,9 +53,7 @@
         </div>
     </div>
 
-    <script src="ran.js"></script>
-    <!-- <script src="main.js"></script> -->
+    <script src="render.js"></script>
     <script src="range.js"></script>
-    <script src="init.slider.js"></script>
 </body>
 </html>
