Slider correct draw

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="container__wrapper">
       <div class="preview slider-1 js-slider-1"><span class="preview__title">Default</span>
+        <div class="qwe"></div>
         <div class="preview__slider-box js-slider__container-slider-1"></div>
         <div class="preview__panel-box js-slider__container-panel-1"></div>
       </div>
