Correct template settings

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -10,16 +10,15 @@
   </head>
   <body>
     <div class="container__wrapper">
-      <div class="preview slider-1 js-slider-1"><span class="preview__title">Default</span>
-        <div class="qwe"></div>
+      <div class="preview slider-1 js-slider-1"><span class="preview__title">Default mode:</span>
         <div class="preview__slider-box js-slider__container-slider-1"></div>
         <div class="preview__panel-box js-slider__container-panel-1"></div>
       </div>
-      <div class="preview slider-2 js-slider-2"><span class="preview__title">Vertical</span>
+      <div class="preview slider-2 js-slider-2"><span class="preview__title">Range mode:</span>
         <div class="preview__slider-box js-slider__container-slider-2"></div>
         <div class="preview__panel-box js-slider__container-panel-2"></div>
       </div>
-      <div class="preview slider-3 js-slider-3"><span class="preview__title">Range</span>
+      <div class="preview slider-3 js-slider-3"><span class="preview__title">Vertical mode:</span>
         <div class="preview__slider-box js-slider__container-slider-3"></div>
         <div class="preview__panel-box js-slider__container-panel-3"></div>
       </div>
