--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="container__wrapper">
-      <div class="preview slider-1 js-slider-1"><span class="preview__title">Default mode:</span>
+      <div class="preview slider-1 js-slider-1"><p class="preview__title">Default mode:</p>
         <div class="preview__container-slider js-container__slider-1"></div>
         <div class="preview__container-panel js-container__panel-1"></div>
       </div>
-      <div class="preview slider-3 js-slider-3"><span class="preview__title">Vertical mode:</span>
+      <div class="preview slider-3 js-slider-3"><p class="preview__title">Vertical mode:</p>
         <div class="preview__container-slider js-container__slider-3"></div>
         <div class="preview__container-panel js-container__panel-3"></div>
       </div>
-      <div class="preview slider-2 js-slider-2"><span class="preview__title">Double Range mode:</span>
+      <div class="preview slider-2 js-slider-2"><p class="preview__title">Double Range mode:</p>
         <div class="preview__container-slider js-container__slider-2"></div>
         <div class="preview__container-panel js-container__panel-2"></div>
       </div>
